# r2upload

./: .env.example  .gitignore  DESKTOP_BUILD.md  Dockerfile  README.md  README_EN.md  cloudflare.html  docker-compose.yml  package-lock.json  package.json  r2upload_plan.md  tsconfig.json
public/: app-standalone.js  app.js  desktop.html  index.html  style.css
scripts/: build-browser.js
src/: config.ts  r2.ts  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/browser/: index.ts  r2-client.ts
src/utils/: keygen.ts
